22-minor-tweaks Removed old version of Enchantment Descriptions. Edited JEI blacklist to show Waystones (due to crafting change). Added PathToDirt and disabled Quark's DirtToPath due to feature overlap. Edited Crucial Guide entries to reflect relevant changes.

--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -361,7 +361,7 @@
 	"Replace Scaffolding" = true
 	"Axe Leaf Harvesting" = false
 	"Sign Editing" = true
-	"Dirt To Path" = true
+	"Dirt To Path" = false
 	"Simple Harvest" = true
 	"Hoe Harvesting" = true
 	"Reacharound Placing" = true
