--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -1394,26 +1394,15 @@ minecraft:potion:clinging;alexsmobs.potion.clinging, Duration: 3600
 minecraft:splash_potion:clinging;alexsmobs.potion.clinging, Duration: 3600
 minecraft:tipped_arrow:clinging;alexsmobs.potion.clinging, Duration: 3600
 minecraft:lingering_potion:clinging;alexsmobs.potion.clinging, Duration: 3600
-curios:ring
-curios:amulet
-curios:crown
-curios:knuckles
-comforts:sleeping_bag_white
-comforts:sleeping_bag_orange
-comforts:sleeping_bag_magenta
-comforts:sleeping_bag_light_blue
-comforts:sleeping_bag_yellow
-comforts:sleeping_bag_lime
-comforts:sleeping_bag_pink
-comforts:sleeping_bag_gray
-comforts:sleeping_bag_light_gray
-comforts:sleeping_bag_cyan
-comforts:sleeping_bag_purple
-comforts:sleeping_bag_blue
-comforts:sleeping_bag_brown
-comforts:sleeping_bag_green
-comforts:sleeping_bag_red
-comforts:sleeping_bag_black
-fluid:cofh_core:experience
-fluid:cofh_core:potion
-fluid:cofh_core:honey
+effect:cofh_core:shocked
+effect:cofh_core:slimed
+effect:cofh_core:sundered
+effect:cofh_core:wrenched
+effect:cofh_core:panacea
+effect:cofh_core:magic_resistance
+effect:cofh_core:love
+effect:cofh_core:lightning_resistance
+effect:cofh_core:explosion_resistance
+effect:cofh_core:enderference
+effect:cofh_core:clarity
+effect:cofh_core:chilled
