--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -1330,7 +1330,7 @@ supplementaries:firefly
 supplementaries:firefly_spawn_egg
 supplementaries:flax
 supplementaries:flax_seeds
-supplementaries:flint_block
+#supplementaries:flint_block
 supplementaries:fodder
 supplementaries:hanging_sign_mangrove_un
 supplementaries:hanging_sign_twisted
@@ -1423,3 +1423,7 @@ effect:cofh_core:explosion_resistance
 effect:cofh_core:enderference
 effect:cofh_core:clarity
 effect:cofh_core:chilled
+cavesandcliffs:axolotl_spawn_egg
+cavesandcliffs:glow_squid_spawn_egg
+cavesandcliffs:goat_spawn_egg
+cavesandcliffs:glow_ink_sac
