--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -574,8 +574,6 @@ fluid:inspirations:potato_soup
 fluid:inspirations:rabbit_stew
 fluid:minecraft:lava
 fluid:minecraft:milk
-fluid:minecraft:water
-fluid:minecraft:water:minecraft:water
 frozenup:chilloo_spawn_egg
 ftblibrary:fluid_container
 guardvillagers:guard_spawn_egg
@@ -583,7 +581,6 @@ guardvillagers:illusioner_spawn_egg
 guardvillagers:iron_golem_spawn_egg
 guardvillagers:snow_golem_spawn_egg
 immersive_portals:portal_helper
-infernalexp:ascus_bomb
 infernalexp:basalt_button
 infernalexp:basalt_cobbled
 infernalexp:basalt_cobbled_slab
@@ -591,9 +588,7 @@ infernalexp:basalt_cobbled_vertical_slab
 infernalexp:basalt_giant_spawn_egg
 infernalexp:blackstone_dwarf_spawn_egg
 infernalexp:blindsight_spawn_egg
-infernalexp:blindsight_tongue_whip
 infernalexp:embody_spawn_egg
-infernalexp:glowsilk_bow
 infernalexp:glowsilk_moth_spawn_egg
 infernalexp:glowsquito_spawn_egg
 infernalexp:luminous_hyphae
@@ -616,7 +611,6 @@ inspirations:custom:inspirations:wet_ice
 inspirations:custom:minecraft:honey_block
 inspirations:custom:minecraft:ice
 inspirations:custom:minecraft:packed_ice
-inspirations:dimension_compass
 inspirations:dye:black
 inspirations:dye:blue
 inspirations:dye:brown
@@ -639,7 +633,6 @@ inspirations:potion:abundance:succumbing_strong
 inspirations:potion:abundance:supportive
 inspirations:potion:abundance:supportive_long
 inspirations:potion:abundance:supportive_strong
-inspirations:potion:alexsmobs:bug_pheromones
 inspirations:potion:alexsmobs:clinging
 inspirations:potion:alexsmobs:knockback_resistance
 inspirations:potion:alexsmobs:lava_vision
@@ -764,7 +757,6 @@ minecraft:dolphin_spawn_egg
 minecraft:donkey_spawn_egg
 minecraft:drowned_spawn_egg
 minecraft:elder_guardian_spawn_egg
-minecraft:enchanted_book
 minecraft:end_portal_frame
 minecraft:enderman_spawn_egg
 minecraft:endermite_spawn_egg
@@ -1124,17 +1116,6 @@ paraglider:rito_goddess_statue
 paraglider:spirit_orb
 paraglider:stamina_vessel
 patchouli:guide_book
-quark:ancient_tome:{StoredEnchantments:[{lvl:2s,id:"minecraft:frost_walker"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"alexsmobs:straddle_jump"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"allurement:vengeance"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"minecraft:depth_strider"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"minecraft:quick_charge"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"minecraft:respiration"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"minecraft:soul_speed"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:4s,id:"minecraft:blast_protection"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:4s,id:"minecraft:fire_protection"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:4s,id:"minecraft:projectile_protection"}]}
-quark:ancient_tome:{StoredEnchantments:[{lvl:4s,id:"minecraft:protection"}]}
 quark:bamboo_mat
 quark:beetroot_crate
 quark:black_candle
@@ -1427,3 +1408,188 @@ cavesandcliffs:axolotl_spawn_egg
 cavesandcliffs:glow_squid_spawn_egg
 cavesandcliffs:goat_spawn_egg
 cavesandcliffs:glow_ink_sac
+minecraft:enchanted_book:[enchantment.minecraft.protection.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.protection.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.protection.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.fire_protection.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.fire_protection.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.fire_protection.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.feather_falling.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.feather_falling.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.feather_falling.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.blast_protection.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.blast_protection.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.blast_protection.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.projectile_protection.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.projectile_protection.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.projectile_protection.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.respiration.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.respiration.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.thorns.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.thorns.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.depth_strider.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.depth_strider.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.frost_walker.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.soul_speed.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.soul_speed.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.sharpness.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.sharpness.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.sharpness.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.sharpness.lvl5]
+minecraft:enchanted_book:[enchantment.minecraft.smite.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.smite.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.smite.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.smite.lvl5]
+minecraft:enchanted_book:[enchantment.minecraft.bane_of_arthropods.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.bane_of_arthropods.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.bane_of_arthropods.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.bane_of_arthropods.lvl5]
+minecraft:enchanted_book:[enchantment.minecraft.knockback.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.fire_aspect.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.looting.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.looting.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.sweeping.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.sweeping.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.efficiency.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.efficiency.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.efficiency.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.efficiency.lvl5]
+minecraft:enchanted_book:[enchantment.minecraft.unbreaking.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.unbreaking.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.fortune.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.fortune.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.power.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.power.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.power.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.power.lvl5]
+minecraft:enchanted_book:[enchantment.minecraft.punch.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.luck_of_the_sea.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.luck_of_the_sea.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.lure.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.lure.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.loyalty.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.loyalty.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.impaling.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.impaling.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.impaling.lvl4]
+minecraft:enchanted_book:[enchantment.minecraft.impaling.lvl5]
+minecraft:enchanted_book:[enchantment.minecraft.riptide.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.riptide.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.quick_charge.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.quick_charge.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.piercing.lvl2]
+minecraft:enchanted_book:[enchantment.minecraft.piercing.lvl3]
+minecraft:enchanted_book:[enchantment.minecraft.piercing.lvl4]
+minecraft:enchanted_book:[enchantment.alexsmobs.straddle_jump.lvl1]
+minecraft:enchanted_book:[enchantment.alexsmobs.straddle_jump.lvl2]
+minecraft:enchanted_book:[enchantment.alexsmobs.straddle_jump.lvl3]
+minecraft:enchanted_book:[enchantment.alexsmobs.lavawax.lvl1]
+minecraft:enchanted_book:[enchantment.alexsmobs.serpentfriend.lvl1]
+minecraft:enchanted_book:[enchantment.alexsmobs.board_return.lvl1]
+minecraft:enchanted_book:[enchantment.farmersdelight.backstabbing.lvl2]
+minecraft:enchanted_book:[enchantment.farmersdelight.backstabbing.lvl3]
+minecraft:enchanted_book:[enchantment.leap.leaping.lvl1]
+minecraft:enchanted_book:[enchantment.matchlockguns.firepower_enchantment.lvl1]
+minecraft:enchanted_book:[enchantment.matchlockguns.firepower_enchantment.lvl2]
+minecraft:enchanted_book:[enchantment.matchlockguns.firepower_enchantment.lvl3]
+minecraft:enchanted_book:[enchantment.matchlockguns.steadyshot_enchantment.lvl1]
+minecraft:enchanted_book:[enchantment.matchlockguns.steadyshot_enchantment.lvl2]
+minecraft:enchanted_book:[enchantment.matchlockguns.steadyshot_enchantment.lvl3]
+minecraft:enchanted_book:[enchantment.matchlockguns.steadyshot_enchantment.lvl4]
+minecraft:enchanted_book:[enchantment.matchlockguns.steadyshot_enchantment.lvl5]
+minecraft:enchanted_book:[enchantment.matchlockguns.quickfire_enchantment.lvl1]
+minecraft:enchanted_book:[enchantment.matchlockguns.quickfire_enchantment.lvl2]
+minecraft:enchanted_book:[enchantment.allurement.launch.lvl2]
+minecraft:enchanted_book:[enchantment.allurement.reeling.lvl2]
+minecraft:enchanted_book:[enchantment.allurement.shockwave.lvl2]
+minecraft:enchanted_book:[enchantment.allurement.shockwave.lvl3]
+minecraft:enchanted_book:[enchantment.allurement.shockwave.lvl4]
+minecraft:enchanted_book:[enchantment.allurement.vengeance.lvl2]
+minecraft:enchanted_book:[enchantment.allurement.vengeance.lvl3]
+minecraft:enchanted_book:[enchantment.walljump.walljump.lvl1]
+minecraft:enchanted_book:[enchantment.walljump.doublejump.lvl1]
+minecraft:enchanted_book:[enchantment.walljump.doublejump.lvl2]
+minecraft:enchanted_book:[enchantment.walljump.doublejump.lvl3]
+minecraft:enchanted_book:[enchantment.walljump.speedboost.lvl1]
+minecraft:enchanted_book:[enchantment.walljump.speedboost.lvl2]
+minecraft:enchanted_book:[enchantment.walljump.speedboost.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.magic_protection.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.magic_protection.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.magic_protection.lvl4]
+minecraft:enchanted_book:[enchantment.ensorcellation.displacement.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.displacement.lvl3]
+minecraft:enchanted_book:[enchantment.cofh_core.disabled.lvl1]
+minecraft:enchanted_book:[enchantment.cofh_core.disabled.lvl2]
+minecraft:enchanted_book:[enchantment.cofh_core.disabled.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.exp_boost.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.exp_boost.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.reach.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.reach.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.vitality.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.vitality.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_ender.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_ender.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_ender.lvl4]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_ender.lvl5]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_illager.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_illager.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_illager.lvl4]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_illager.lvl5]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_villager.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_villager.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_villager.lvl4]
+minecraft:enchanted_book:[enchantment.ensorcellation.damage_villager.lvl5]
+minecraft:enchanted_book:[enchantment.ensorcellation.frost_aspect.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.leech.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.leech.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.leech.lvl4]
+minecraft:enchanted_book:[enchantment.ensorcellation.vorpal.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.vorpal.lvl3]
+minecraft:enchanted_book:[enchantment.ensorcellation.excavating.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.hunter.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.quick_draw.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.trueshot.lvl2]
+minecraft:enchanted_book:[enchantment.ensorcellation.angler.lvl2]
+minecraft:enchanted_book:[enchantment.cofh_core.disabled.lvl4]
+minecraft:enchanted_book:[enchantment.ensorcellation.phalanx.lvl2]
+minecraft:enchanted_book:[enchantment.create.potato_recovery.lvl2]
+minecraft:enchanted_book:[enchantment.create.potato_recovery.lvl3]
+minecraft:enchanted_book:[enchantment.create.capacity.lvl2]
+minecraft:enchanted_book:[enchantment.create.capacity.lvl3]
+inspirations:potion:alexsmobs:bug_pheromones
+fluid:minecraft:water
+inspirations:dimension_compass
+quark:ancient_tome:{StoredEnchantments:[{lvl:4s,id:"ensorcellation:tilling"}]}
+quark:ancient_tome:{StoredEnchantments:[{lvl:4s,id:"ensorcellation:furrowing"}]}
+quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"ensorcellation:magic_edge"}]}
+quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"ensorcellation:cavalier"}]}
+quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"ensorcellation:fire_rebuke"}]}
+quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"ensorcellation:frost_rebuke"}]}
+quark:ancient_tome:{StoredEnchantments:[{lvl:2s,id:"ensorcellation:gourmand"}]}
+quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"walljump:doublejump"}]}
+quark:ancient_tome:{StoredEnchantments:[{lvl:3s,id:"walljump:speedboost"}]}
+create:copper_ingot
+cavesandcliffs:deepslate
+cavesandcliffs:cobbled_deepslate
+cavesandcliffs:polished_deepslate
+cavesandcliffs:deepslate_bricks
+cavesandcliffs:cracked_deepslate_bricks
+cavesandcliffs:deepslate_tiles
+cavesandcliffs:cracked_deepslate_tiles
+cavesandcliffs:chiseled_deepslate
+cavesandcliffs:cobbled_deepslate_stairs
+cavesandcliffs:polished_deepslate_stairs
+cavesandcliffs:deepslate_brick_stairs
+cavesandcliffs:deepslate_tile_stairs
+cavesandcliffs:cobbled_deepslate_slab
+cavesandcliffs:polished_deepslate_slab
+cavesandcliffs:deepslate_brick_slab
+cavesandcliffs:deepslate_tile_slab
+cavesandcliffs:cobbled_deepslate_vertical_slab
+cavesandcliffs:polished_deepslate_vertical_slab
+cavesandcliffs:deepslate_brick_vertical_slab
+cavesandcliffs:deepslate_tile_vertical_slab
+cavesandcliffs:cobbled_deepslate_wall
+cavesandcliffs:polished_deepslate_wall
+cavesandcliffs:deepslate_brick_wall
+cavesandcliffs:deepslate_tile_wall
